# io_uring_async_load_process_write

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README_USAGE.md  setup_codex_files.sh
.agents/skills/asyncdataloader-cpp-coach/: SKILL.md
benchmark/: stage3_bench_mmap.cpp  stage3_bench_pread.cpp  stage3_bench_sync.cpp
docs/: CODEX_START_PROMPTS.txt  CODEX_START_PROMPTS_DRIVER_NAVIGATOR.txt  CODEX_WORKFLOW.md  anti_collapse_checklist.md  benchmark.md  design.md  interview.md  project_manual.docx  staged_prompts.txt
docs/stage_summaries/: stage0_summary.md  stage1_summary.md  stage2_summary.md  stage3_summary.md  stage4_summary.md
examples/: stage2_sync_preprocess_demo.cpp
examples/coroutines/: delay_awaiter_demo.cpp  manual_resume_demo.cpp  simple_task_demo.cpp
examples/io_uring/: uring_batch_read.cpp  uring_read_once.cpp  uring_write_demo.cpp
include/baseline/: sync_preprocess_baseline.h
include/benchmark/: benchmark_cli.h  benchmark_report.h  benchmark_stats.h
include/util/: fd_guard.h  file_io.h  timer.h
src/: main.cpp
src/baseline/: sync_preprocess_baseline.cpp
src/benchmark/: benchmark_report.cpp  benchmark_stats.cpp
src/util/: fd_guard.cpp  file_io.cpp  timer.cpp
tests/: stage0_smoke_test.cmake  stage1_delay_awaiter_demo_test.cmake  stage1_manual_resume_demo_test.cmake  stage1_simple_task_demo_test.cmake  stage2_fd_guard_test.cpp  stage2_file_io_test.cpp  stage2_sync_preprocess_baseline_test.cpp  stage2_sync_preprocess_demo_test.cmake  stage2_timer_test.cpp  stage3_bench_mmap_test.cmake  stage3_bench_pread_test.cmake  stage3_bench_sync_test.cmake  stage3_benchmark_stats_test.cpp  stage4_uring_batch_read_test.cmake  stage4_uring_read_once_test.cmake  stage4_uring_write_demo_test.cmake
